fix javascript contact and login

--- a/admin/login.html
+++ b/admin/login.html
@@ -29,7 +29,7 @@
                         </span>
                         <br>
                         <span id="user-name-valid-error" class="message-error hide">
-                            User name must be within 6-30 characters!
+                            Username must be within 6-30 characters!
                         </span>
                     </label>
                 </p>
@@ -43,7 +43,7 @@
                         </span>
                         <br>
                         <span id="password-valid-error" class="message-error hide">
-                            User name must be within 6-30 characters!
+                            Password must be within 6-30 characters!
                         </span>
                     </label>
                 </p>
